actualizacion arreglos modificaciones en el css

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&family=Playfair+Display:ital,wght@0,700;1,400&display=swap');
+
 body {
     margin: 0;
 }
@@ -10,7 +11,6 @@ header {
     justify-content: center;
     margin: 0 auto;
     padding-bottom: 30px;
-    border: 1px solid;
 }
 
 header h1 {
@@ -18,21 +18,22 @@ header h1 {
     height: 64px;
     left: 236px;
     top: 49px;
-margin-bottom: 0;
+    margin-bottom: 0;
     font-family: 'Playfair Display';
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
 }
-.infoHeader{
-    display: flex;    
+
+.infoHeader {
+    display: flex;
 }
+
 header em {
     width: 592px;
     height: 51px;
     left: 261px;
     top: 100px;
-border: 1px solid red;
     font-family: 'Montserrat';
     font-style: italic;
     font-weight: 500;
@@ -40,6 +41,7 @@ border: 1px solid red;
     line-height: 17px;
     color: #4F4F4F;
 }
+
 .heroImg {
     width: 969px;
     height: 470px;
@@ -125,27 +127,32 @@ ul li div h3 {
     flex-direction: column;
     margin-top: 30px;
     margin-bottom: 38px;
-    border: 1px solid red;
 }
-.ingrediente{
+
+.ingrediente {
     display: flex;
+    align-items: flex-start;
 }
-.ingredients form label{
 
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 16px;
-font-weight: 400;
-line-height: 25px;
-letter-spacing: 0em;
-text-align: left;
+.ingrediente input {
+    width: 20px;
+    height: 20px;
+    margin-right: 15px;
+}
 
-height: 50px;
-width: 554px;
-left: 275px;
-top: 830px;
-border-radius: nullpx;
+.ingredients form label {
 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: left;
 
+    height: 50px;
+    width: 554px;
+    left: 275px;
+    top: 830px;
 }
 
 .instruction {
