--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&family=Playfair+Display:ital,wght@0,700;1,400&display=swap');
+.playfair {
+    font-family: 'Playfair Display', serif;
+}
+
+.orange {
+    color: #F2994A;
+}
 
 .material-symbols-outlined {
     font-variation-settings:
@@ -10,16 +17,19 @@
     margin-right: 13px;
 }
 
+.secciones {
+    display: flex;
+    margin: 0 auto;
+}
+
 body {
     margin: 0;
-}
 
-.orange {
-    color: #F2994A;
 }
-
+header, section{
+    padding-left: 234px;
+}
 header {
-    width: 969PX;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -39,10 +49,6 @@ header h1 {
     font-size: 48px;
 }
 
-.playfair {
-    font-family: 'Playfair Display', serif;
-}
-
 .infoHeader {
     display: flex;
     align-items: flex-start;
@@ -52,7 +58,7 @@ header h1 {
     padding-right: 10px;
 }
 
-header em {
+.infoHeader em {
     width: 592px;
     height: 51px;
     left: 261px;
@@ -74,13 +80,6 @@ header em {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    margin: 0 auto;
-}
-
-.secciones {
-    display: flex;
-    width: 969px;
-    margin: 0 auto;
 }
 
 .card {
@@ -249,3 +248,41 @@ text-align: center;
 color: #828282;
 
 }
+
+footer a{
+    color: #333;
+    text-decoration: none;
+}
+
+@media (max-width: 375px) {
+    header, section{
+        padding-left: 0;
+    }
+header h1 {
+    width: 323px;
+    height: 29px;
+    left: 11px;
+    top: 32px;
+    
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;}
+    .heroImg{
+        width: 375px;
+    }
+    .contenedor, .ingredients, .infoHeader em{
+        width: 100%;
+    }
+    .secciones{
+        flex-direction: column-reverse;
+
+    }
+    .card{
+        left: 0;
+        flex-wrap: nowrap;
+        width: 0;
+        height: 0;
+    }
+} 
