--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&family=Playfair+Display:ital,wght@0,700;1,400&display=swap');
+
 .playfair {
     font-family: 'Playfair Display', serif;
 }
@@ -26,9 +27,12 @@ body {
     margin: 0;
 
 }
-header, section{
+
+header,
+section {
     padding-left: 234px;
 }
+
 header {
     display: flex;
     align-items: flex-start;
@@ -55,7 +59,7 @@ header h1 {
 }
 
 .imgInfoHeader {
-    padding-right: 10px;
+    padding: 5px;
 }
 
 .infoHeader em {
@@ -224,65 +228,143 @@ ul li div h3 {
 }
 
 .source {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    margin: 50px 0 50px 0;
     font-family: 'Montserrat';
     font-style: italic;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-
     color: #BDBDBD;
 }
 
-footer{
+footer {
 
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 17px;
-margin: 90px 0 20px 0;
-/* identical to box height */
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 19px;
+    margin: 150px 0 0 0;
+    background-color: #222;
+    /* identical to box height */
 
-text-align: center;
+    text-align: center;
 
-color: #828282;
+    color: #828282;
 
 }
 
-footer a{
-    color: #333;
+a {
+    color: #BDBDBD;
     text-decoration: none;
 }
 
-@media (max-width: 375px) {
-    header, section{
-        padding-left: 0;
+/* MOBILE */
+@media (max-width: 376px) {
+    body {
+        margin: 0 0 0 11px;
     }
-header h1 {
-    width: 323px;
-    height: 29px;
-    left: 11px;
-    top: 32px;
-    
-    font-family: 'Playfair Display';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 32px;}
-    .heroImg{
-        width: 375px;
+
+    header,
+    section {
+        padding: 0;
     }
-    .contenedor, .ingredients, .infoHeader em{
+
+    header h1 {
+        width: 323px;
+        height: 29px;
+
+        font-family: 'Playfair Display';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 32px;
+    }
+
+    .heroImg {
+        width: 352px;
+        height: 230px;
+        margin-top: 20px;
+    }
+
+    .contenedor,
+    .ingredients,
+    .infoHeader em {
         width: 100%;
-    }
-    .secciones{
-        flex-direction: column-reverse;
+        font-family: Montserrat;
+        font-size: 12px;
+        font-style: italic;
+        font-weight: 500;
+        line-height: 15px;
+        letter-spacing: 0em;
+        text-align: left;
 
     }
-    .card{
-        left: 0;
-        flex-wrap: nowrap;
-        width: 0;
-        height: 0;
+
+    .secciones {
+        flex-direction: column-reverse;
     }
-} 
+
+    .card {
+        width: 100%;
+        left: 0;
+        box-shadow: none;
+        margin-top: 24px;
+        height: auto;
+    }
+
+    .card .title {
+        display: flex;
+        align-items: center;
+    }
+
+    .card .title div{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card .title div h3 {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 12px;
+        margin-bottom: 12px;
+    }
+
+    .card h4 {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 8px;
+        line-height: 10px;
+        text-transform: uppercase;
+
+        /* Gray 4 */
+
+        color: #BDBDBD;
+
+    }
+
+    .card ul {
+        flex-wrap: nowrap;
+        flex-direction: row;
+    }
+
+    .card ul li {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 12px;
+
+        /* Gray 1 */
+
+        color: #333333;
+
+    }
+}
