--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ header h1 {
     display: flex;
     align-items: flex-start;
     margin-top: 12px;
-    width: 320px;
 }
 
 .imgInfoHeader {
@@ -97,8 +96,21 @@ header h1 {
     width: 216px;
     height: 367px;
     float: left;
+    font-family: 'Montserrat';
+    font-size: 10px;
 }
-
+.card h3 {
+    font-size: 14px;
+}
+.card .title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+.title div h4, h3{
+    margin: 0;
+}
 .card ul {
     padding: 0;
     margin: 0;
@@ -107,8 +119,9 @@ header h1 {
     flex-direction: column;
     align-content: center;
     list-style: none;
-    height: 100%;
+    height: 260px;
     align-items: flex-start;
+    justify-content: space-around;
 }
 
 ul li div h4 {
@@ -335,17 +348,16 @@ margin-top: 30px;
 
     .card .title {
         display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin-top: 20px;
     }
 
     .card .title div {
         display: flex;
         flex-direction: column;
         margin-bottom: 15px;
-    }
-
-    .card .title div h4 h3 {
-        margin: 0;
-    }
+    }  
 
     .card .title div h3 {
         font-family: 'Montserrat';
@@ -371,6 +383,7 @@ margin-top: 30px;
         flex-direction: row;
         justify-content: space-between;
         width: 300px;
+        height: auto;
     }
 
     .card ul li {
